[package]
name = "rs_observable"
description = "Simple observable pattern implementation"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.20"

[dev-dependencies]
env_logger = "0.11.1"

[features]
all = ["single", "tokio"]
default = ["tokio"]
single = []
tokio = []
